<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textColor="#000000"
        android:text="@string/connreq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:textColor="#000000"
        android:text="@string/req1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="16sp"
        android:drawableLeft="@drawable/key_18"
        android:drawablePadding="10dp"
        android:layout_margin="10dp"
        android:textColor="#000000"
        android:text="@string/req2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="right"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/cancel"
            android:padding="10dp"
            android:text="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/ok"
            android:padding="10dp"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>