<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/colorPrimaryDark"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/nt3_logo" />

            <TextView
                android:id="@+id/welcometext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/lato_bold"
                android:gravity="center_horizontal"
                android:text="Welcome to NT3!"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="21dp"
                android:textStyle="bold" />

            <EditText
                android:layout_marginTop="70dp"
                android:id="@+id/organizationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_organization"
                android:inputType="text"
                android:textSize="16dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/roundedbutton"
                android:padding="12dp"
                android:textSize="18dp"
                android:textColor="#FFFFFF"
                android:text="@string/submit"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="2dp"
                android:paddingRight="12dp"
                android:visibility="gone"
                android:paddingLeft="12dp"
                android:textStyle="bold"
                android:textSize="14dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/pnote"/>

            <TextView
                android:id="@+id/note"
                android:ellipsize="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="2dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingRight="12dp"
                android:visibility="gone"
                android:paddingLeft="12dp"
                android:textSize="12dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/note"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>